@@ -2,9 +2,16 @@
 
 
 return array(
+	'Please enter your password to confirm deletion:' => 'Bitte geben Sie ihr Passwort ein, um den Löschvorgang zu bestätigen:',
+	'Are you really sure you want to delete your Account?' => 'Sind sie Sicher, dass sie ihren Zugang löschen wollen?',
+	'Admin users can not be deleted!' => 'Administratoren können nicht gelöscht werden',
 	'Group name on the language of "sourceLanguage".' => 'Gruppenname in der Basissprache.',
 	'Display order of group.' => 'Anzeigereihenfolge der Gruppe.',
 	'Group Name' => 'Gruppenname',
+	'Try again' => 'Erneut versuchen',
+	'Wrong password confirmation! Account was not deleted' => 'Falsches Bestätigugspasswort! Zugang wurde nicht gelöscht',
+	'Confirm deletion' => 'Löschvorgang bestätigen',
+	'Cancel deletion' => 'Löschvorgang abbrechen',
 	'Profile fields groups' => 'Profilfeldgruppen',
 	'Manage users' => 'Benutzer verwalten', 
 	'Manage profile fields groups' => 'Profilfeldgruppen verwalten', 
@@ -21,8 +28,9 @@ return array(
 	'Manage roles' => 'Rollen verwalten',
 	'Manage my Users' => 'Meine Benutzer verwalten',
 	'Manage this profile' => 'dieses Profil bearbeiten',
-	'User belongs to these Roles' => 'Benutzer gehört diesen Rollen an:',
-	'This user can administrate this users' => 'Benutzer kann diese Benutzer verwalten:',
+	'None' => 'Keine',
+	'This user belongs to these roles:' => 'Benutzer gehört diesen Rollen an:',
+	'This user can administrate this users:' => 'Benutzer kann diese Benutzer verwalten:',
 	'Your Account has been activated. Thank you for your registration.' =>
 	'Ihr Account wurde aktiviert. Danke für ihre Anmeldung. ',
 	'Registration' => 'Registrierung',
@@ -55,7 +63,8 @@ return array(
 	'The value of the default field (database).' => 'Standard-Wert für die Datenbank',
 	'Display order of fields.' => 'Reihenfolgenposition, in der das Feld angezeigt wird',
 	'Create Role' => 'Rolle anlegen',
-	'List Roles' => 'Rollen anzeigen',
+	'List roles' => 'Rollen anzeigen',
+	'List users' => 'Benutzer anzeigen',
 	'Manage Roles' => 'Rollenverwaltung',
 	'Logout' => 'Logout',
 	'username' => 'Benutzername',
@@ -121,7 +130,7 @@ return array(
 	'Banned' => 'Verbannt',
 	'Please fill out the following form with your login credentials:' => 'Bitte geben Sie ihre Login-Daten ein:',
 	'Fields with <span class="required">*</span> are required.' => 'Felder mit <span class="required"> * </span> sind erforderlich.',
-	'List User' => 'Benutzer auflisten',
+	'List user' => 'Benutzer auflisten',
 	'Edit' => 'Bearbeiten',
 	'Edit profile' => 'Meine Profildaten bearbeiten',
 	'Allowed are lowercase letters and digits.' => 'Erlaubt sind Kleinbuchstaben und Ziffern.',	
